...
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="40dp"
            android:text="@string/enter_height" />

        <EditText
            android:id="@+id/et_height"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/tv_enter_height"
            android:layout_marginLeft="5dp"
...
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="40dp"
            android:text="@string/enter_weight" />

        <EditText
            android:id="@+id/et_weight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/tv_enter_weight"
            android:layout_marginLeft="5dp"
...
            android:ems="10"
            android:hint="@string/weight_in_kg"
            android:inputType="numberDecimal"
            android:maxLength="6" />

        <Button
            android:id="@+id/btn_enter_for_bmi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/et_weight"
            android:onClick="saveMeasurement"
            android:text="Enter" />

        <Button
            android:id="@+id/btn_undo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/et_weight"
...
            android:layout_alignTop="@+id/btn_undo"
            android:onClick="clnicalDecision"
            android:text="CDR"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/tv_bmi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btn_enter_for_bmi"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="25dp"
            android:text="@string/bmi"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/tv_bmi_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_bmi"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
...
            android:layout_marginStart="5dp"
            android:layout_marginTop="25dp"
            android:text="@string/height"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/tv_height_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/tv_heightText"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
...
            android:layout_marginStart="5dp"
            android:layout_marginTop="25dp"
            android:text="@string/weight"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/tv_weight_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/tv_weightText"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
...
