...
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="60dp"
            tools:context=".profiles.CreateProfileView">


            <EditText
                android:id="@+id/et_firstname"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_alignParentLeft="false"
                android:layout_alignParentStart="false"
                android:layout_gravity="center_horizontal|bottom"
                android:layout_marginTop="30dp"
...
                android:inputType="textCapSentences"
                android:lines="1"
                android:maxLines="1"
                android:singleLine="true" />

            <EditText
                android:id="@+id/et_lastname"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_alignParentStart="false"
                android:layout_below="@+id/et_firstname"
                android:layout_gravity="left|center_vertical"
                android:layout_marginTop="10dp"
...
                android:layout_height="wrap_content"
                android:layout_below="@+id/et_lastname"
                android:layout_marginTop="10dp"
                android:text="@string/gender" />

            <RadioGroup
                android:id="@+id/rg_gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_gender"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="10dp">

...
                    android:id="@+id/rb_sex_male"
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:text="@string/male" />

                <RadioButton
                    android:id="@+id/rb_sex_female"
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:text="@string/female" />
            </RadioGroup>

            <TextView
...
                android:layout_alignStart="@+id/tv_gender"
                android:layout_below="@+id/rg_gender"
                android:layout_marginTop="20dp"
                android:text="@string/birthday" />

            <DatePicker
                android:id="@+id/dp_birthday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_birthdate"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:calendarViewShown="false"
...
