<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/save_profile"
        android:orderInCategory="100"
        android:title="@string/save"
        app:showAsAction="ifRoom" />
</menu>
